--- a/forntend/src/styles/clientdashbord.css
+++ b/forntend/src/styles/clientdashbord.css
@@ -3,4 +3,6 @@
 
 .dashboardContainer{
     font-family: "Funnel Sans", sans-serif;
+    font-size: 14px;
+    font-weight: 500;
 }
